# robin_arena

./: CMakeLists.txt  README.md  install.sh  package.xml
cfg/: apriltags_arena.yaml  arena_config.rviz
launch/: apriltag.launch  ar_bringup.launch  arena.launch  controller_utils.launch  magnet_control.launch  real_ar.launch  robin_bringup.launch  run_calibration.launch  simulated_ar.launch  ur5.launch  ur5_gazebo.launch
launch/internal/: apriltag_ros.launch  arena.launch  controller_utils.launch  controller_utils_ur5_3fgripper.launch  controller_utils_with_magnet.launch  real_ar.launch  robin_real.launch  robin_sim.launch  simulated_ar.launch  ur5.launch  ur5_bringup.launch  ur5_gazebo.launch  ur5_moveit_planning_execution.launch  ur5_with_gripper_moveit_planning_execution.launch
maps/: arena.pgm  arena.yaml  arena_old.pgm  arena_open.pgm  arena_open.yaml
models/simplified_arena/: model.config  model.sdf
src/: fromQuaternionToTF.cpp  magnet.cpp
urdf/: kinect.urdf.xacro  manipulator_arena_setup.urdf.xacro  manipulator_no_gripper_arena_setup.urdf.xacro  manipulator_ur5_3fgripper_arena_setup.urdf.xacro  manipulator_ur5_magnet_arena_setup.urdf.xacro  manipulator_with_gripper_arena_setup.urdf.xacro  table.urdf.xacro  ur5_limited.urdf.xacro  ur5_magnet_arena_setup.urdf.xacro  ur5_with_gripper.urdf.xacro
urdf/assemblies/: ur5_3fgripper.urdf.xacro  ur5_magnet.urdf.xacro  ur5_no_gripper.urdf.xacro  ur5_with_gripper.urdf.xacro  ur5_with_magnet.urdf.xacro
urdf/assets/: adaptor.urdf.xacro  kinect.urdf.xacro  kinect2.gazebo.xacro  kinect2.urdf.xacro  table.urdf.xacro  ur_stand.urdf.xacro  wall.urdf.xacro
urdf/robots/ur/: ur.gazebo.xacro  ur5.urdf.xacro
worlds/: ar_arena.world  robin_arena.world  robin_arena_hw4.world  robin_arena_navigation_only.world  robin_arena_open.world  robin_arena_simplified.world
