<?xml version="1.0"?>
<package>
  <name>ar_arena</name>
  <version>0.0.1</version>
  <description>The Unipd Autonomous Robotics Arena package</description>

  <maintainer email="elisa.tosello@unipd.it">Elisa Tosello</maintainer>
  <maintainer email="luca.tagliapietra@unipd.it">Luca Tagliapietra</maintainer>
  <license>Apache</license>
  <author email="elisa.tosello@unipd.it">Elisa Tosello</author>
  <author email="luca.tagliapietra@unipd.it">Luca Tagliapietra</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robotiq_3f_gripper_articulated_msgs</run_depend>
  <run_depend>robotiq_3f_gripper_control</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros
      gazebo_plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models:${prefix}/..:${prefix}"/>
  </export>
</package>
