<?xml version="1.0"?>
<package>
  <name>robin_arena</name>
  <version>0.0.1</version>
  <description>RobIn 4.0 package</description>

  <maintainer email="elisa.tosello@unipd.it">Elisa Tosello</maintainer>
  <maintainer email="luca.tagliapietra@unipd.it">Luca Tagliapietra</maintainer>
  <license>Apache</license>
  <author email="elisa.tosello@unipd.it">Elisa Tosello</author>
  <author email="luca.tagliapietra@unipd.it">Luca Tagliapietra</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robotiq_3f_gripper_articulated_msgs</run_depend>
  <run_depend>robotiq_3f_gripper_control</run_depend>

  <export>
    <gazebo_ros
      gazebo_plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models:${prefix}/..:${prefix}"/>
  </export>

</package>
